fim da sessão 3

--- a/SuitSiteAutomationPratice/results/report.html
+++ b/SuitSiteAutomationPratice/results/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,33089],[],[[4,0,1,0,[],[1,408,15959],[]],[5,0,1,0,[],[1,16374,16650],[]]],[],[2,2,2,2]];
+window.output["suite"] = [1,2,3,0,[],[1,0,26359],[],[[4,0,1,0,[],[1,278,14294],[]],[5,0,1,0,[],[1,14578,11770],[]]],[],[2,2,2,2]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestSuiteAutomationPratice","*C:\\Projetos\\SuitSiteAutomationPratice\\tests\\TestSuiteAutomationPratice.robot","*../tests/TestSuiteAutomationPratice.robot","*Caso de Teste 01: Pesquisar produto existente","*Caso de teste 02: Pesquisar produto não existente"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestSuiteAutomationPraticeBDD","*C:\\Users\\suelen.cardoso\\Downloads\\Aulas\\RobotFramework\\SuitSiteAutomationPratice\\tests\\TestSuiteAutomationPraticeBDD.robot","*../tests/TestSuiteAutomationPraticeBDD.robot","*Cenário 01: Pesquisar produto existente","*Cenário 02: Pesquisar produto não existente"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:33","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:33","fail":0,"label":"All Tests","pass":2}],[],[{"elapsed":"00:00:33","fail":0,"id":"s1","label":"TestSuiteAutomationPratice","name":"TestSuiteAutomationPratice","pass":2}]];
+window.output["stats"] = [[{"elapsed":"00:00:26","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:26","fail":0,"label":"All Tests","pass":2}],[],[{"elapsed":"00:00:26","fail":0,"id":"s1","label":"TestSuiteAutomationPraticeBDD","name":"TestSuiteAutomationPraticeBDD","pass":2}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1572399086955;
+window.output["baseMillis"] = 1572542215853;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 33176;
+window.output["generated"] = 26396;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
