--- a/SuitSiteAutomationPratice/results/report.html
+++ b/SuitSiteAutomationPratice/results/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,26359],[],[[4,0,1,0,[],[1,278,14294],[]],[5,0,1,0,[],[1,14578,11770],[]]],[],[2,2,2,2]];
+window.output["suite"] = [1,2,3,0,[],[0,0,12816],[[4,5,6,0,[],[0,49,12762],[],[[7,0,1,0,[],[0,373,12432,8],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestSuiteAutomationPraticeBDD","*C:\\Users\\suelen.cardoso\\Downloads\\Aulas\\RobotFramework\\SuitSiteAutomationPratice\\tests\\TestSuiteAutomationPraticeBDD.robot","*../tests/TestSuiteAutomationPraticeBDD.robot","*Cenário 01: Pesquisar produto existente","*Cenário 02: Pesquisar produto não existente"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\suelen.cardoso\\Downloads\\Aulas\\RobotFramework\\SuitSiteAutomationPratice\\tests","*../tests","*TestSuiteAutomationPratice","*C:\\Users\\suelen.cardoso\\Downloads\\Aulas\\RobotFramework\\SuitSiteAutomationPratice\\tests\\TestSuiteAutomationPratice.robot","*../tests/TestSuiteAutomationPratice.robot","*Caso de teste 06: Adicionar cliente","*No keyword with name 'Generate Random String' found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:26","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:26","fail":0,"label":"All Tests","pass":2}],[],[{"elapsed":"00:00:26","fail":0,"id":"s1","label":"TestSuiteAutomationPraticeBDD","name":"TestSuiteAutomationPraticeBDD","pass":2}]];
+window.output["stats"] = [[{"elapsed":"00:00:12","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:12","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:13","fail":1,"id":"s1","label":"Tests","name":"Tests","pass":0},{"elapsed":"00:00:13","fail":1,"id":"s1-s1","label":"Tests.TestSuiteAutomationPratice","name":"TestSuiteAutomationPratice","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1572542215853;
+window.output["baseMillis"] = 1572628694501;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 26396;
+window.output["generated"] = 12838;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
